Fixed carousel overflow

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ div.carousel-indicators {
 }
 
 #upcomingProductsCarousel {
+    max-width: 100%;
     width: 480px;
 }
 
